# Workspace-Vue3-DRF-PostgreSQL

./: .gitignore  README.md  docker-compose.backend.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  conftest.py  docker-entrypoint.sh  manage.py  pyproject.toml
backend/apps/common/: permissions.py
backend/apps/common/tests/: test_permissions.py
backend/apps/documents/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/documents/migrations/: 0001_initial.py  0002_initial.py
backend/apps/documents/tests/: image_helpers.py  test_models.py  test_serializers.py  test_signals.py  test_views.py
backend/apps/schedules/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/schedules/migrations/: 0001_initial.py  0002_initial.py
backend/apps/schedules/services/: constants.py  employee_users.py  generator.py  grid.py  period.py  rules.py  save.py
backend/apps/schedules/tests/: test_employee_users.py  test_generator.py  test_generator_utils.py  test_grid.py  test_period.py  test_rules.py  test_save.py  test_serializers.py  test_views.py
backend/apps/users/: admin.py  auth_cookies.py  models.py  password_validation.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/users/tests/: test_auth.py  test_models.py  test_serializers.py  test_views.py
backend/config/: env.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
backend/fixtures/demo/: README.md  dataset.json
frontend/: .dockerignore  Dockerfile  (+8 more)
(+82 files in other folders)
